<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/navigation_setings"
        android:icon="@drawable/ic_settings_black_24dp"
        android:title="@string/title_settings"/>

    <item
        android:id="@+id/navigation_dossiers"
        android:icon="@drawable/ic_folder_black_24dp"
        android:title="@string/title_dossier"/>

    <item
        android:id="@+id/navigation_home"
        android:icon="@drawable/ic_bezymyanny_1"
        android:title="Dashboard"/>

    <item
        android:id="@+id/navigation_tba"
        android:icon="@drawable/ic_call_black_24dp"
        android:title="Сontact"/>



    <item
        android:id="@+id/navigation_persanal_info"
        android:icon="@drawable/ic_person_black_24dp"
        android:title="@string/title_profile"/>

</menu>
