<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/fragment1"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/white">

    <!--<LinearLayout-->
    <!--android:layout_width="match_parent"-->
    <!--android:layout_height="match_parent"-->
    <!--android:orientation="vertical">-->

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="2"
        android:orientation="vertical"
        android:padding="20dp">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/text_border_lang"
            android:paddingBottom="3dp"
            android:text="@string/account_details"/>



    </LinearLayout>

    <LinearLayout
        android:layout_width="255dp"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:gravity="bottom"
        android:orientation="vertical"
        android:padding="20dp">

        <Button
            android:id="@+id/pers_info_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="15dp"
            android:layout_marginBottom="15dp"
            android:background="@color/button_c"
            android:text="@string/personal_info"
            android:textColor="@color/white" />

        <Button
            android:id="@+id/contract_info_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="15dp"
            android:layout_marginBottom="15dp"
            android:background="@color/button_c"
            android:text="@string/contract_info"
            android:textColor="@color/white"
            android:onClick="Log_out"/>
    </LinearLayout>
</LinearLayout>
    <!--</LinearLayout>-->