<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/white"
    android:padding="15dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/create_file_bottom_pink_border"
        android:gravity="bottom"
        android:paddingBottom="5dp"
        android:layout_marginVertical="10dp"
        android:orientation="horizontal">
        <TextView
            android:id="@+id/textView3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/invoices"
            android:textSize="17sp" />
        <TextView
            android:id="@+id/textView4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="6/6"
            android:textSize="17sp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_vertical"
        android:layout_marginVertical="20dp"
        android:orientation="vertical">
        <TextView
            android:id="@+id/invoice_numb"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="4dp"
            android:text="@string/invoice_numb" />
        <EditText
            android:id="@+id/edit_invoice_numb"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/select_stile"
            android:hint="123456789"
            android:padding="6dp"
            android:entries="@array/private_company"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_vertical"
        android:layout_marginVertical="20dp"
        android:orientation="vertical">
        <TextView
            android:id="@+id/amount"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="4dp"
            android:text="@string/amount" />
        <EditText
            android:id="@+id/edit_amount"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/select_stile"
            android:hint="12345.00"
            android:padding="6dp"
            android:entries="@array/private_company"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_vertical"
        android:layout_marginVertical="20dp"
        android:orientation="vertical">

        <TextView
            android:id="@+id/textView13"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="4dp"
            android:text="@string/invoice_date" />

        <EditText
            android:id="@+id/edit_variable_1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/select_stile"
            android:hint="dd-mm-yyyy"
            android:padding="6dp"
            android:entries="@array/private_company"/>
    </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_vertical"
        android:layout_marginVertical="20dp"
        android:orientation="vertical">
        <TextView
            android:id="@+id/expiration_date"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="4dp"
            android:text="@string/expiration_date" />
        <EditText
            android:id="@+id/edit_expiration_date"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/select_stile"
            android:hint="dd-mm-yyyy"
            android:padding="6dp"
            android:entries="@array/private_company"/>
    </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_vertical"
        android:layout_marginVertical="20dp"
        android:orientation="vertical">

        <Button
            android:id="@+id/button4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="15dp"
            android:background="@color/colorPrimaryLight"
            android:paddingHorizontal="10dp"
            android:text="@string/add_attach"
            android:textColor="@color/white" />
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_vertical">

        <ImageButton
            android:id="@+id/imageButton"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center_vertical"
            android:background="@color/white"
            app:srcCompat="@drawable/ic_add_black_24dp" />

        <TextView
            android:id="@+id/textView"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="9"
            android:gravity="center_vertical"
            android:padding="7dp"
            android:text="@string/add_invoice"
            android:textSize="16sp" />
    </LinearLayout>
    <LinearLayout
        android:id="@+id/for_company_layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="10dp"
        android:orientation="horizontal">

    </LinearLayout>

</LinearLayout>

